remove unwanted files and related lines in README

--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 
-1) The Auto scalling template in this repository is derived from this URL http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/example-templates-autoscaling.html
-you can visit the URL for more Information.
+1)The "VPC_With_PublicIPs_And_DNS.template"  derived from https://s3-us-west-2.amazonaws.com/cloudformation-templates-us-west-2/VPC_With_PublicIPs_And_DNS.template.
 
-2)The "VPC_With_PublicIPs_And_DNS.template"  derived from https://s3-us-west-2.amazonaws.com/cloudformation-templates-us-west-2/VPC_With_PublicIPs_And_DNS.template.
-
-3) 
+2) instance.template is my own version of creating an instance in a specific subnet 
+ 
 
